# iv_lab

./: .gitignore  CLAUDE.md  README.md  SETUP.md  pyproject.toml  setup.py
IVLab/: IV_gui.py  IVlab.py  IVlab_old.py  pymeasure_control_v9.py  system_settings-bcl-iv-old.json  system_settings-ivlab_indoor.json  system_settings.json  system_settings_Dell.json  system_settings_FTE.json  system_settings_OrielIV.json  system_settings_OrielIV_Felix.json  system_settings_OrielIV_LPI.json  system_settings_Sinus70-1.json  system_settings_gmf.json  system_settings_oldIV.json  users_generic.txt
_old/IVLab/: IV_gui.py  IVlab.py  IVlab_old.py  notes.txt  system_settings-bcl-iv-old.json  system_settings-bcl.json  system_settings-ivlab.json  system_settings-ivlab_indoor.json  system_settings.json  system_settings_OrielIV_Felix.json  system_settings_OrielIV_LPI.json  system_settings_oldIV.json
_old/IVLab Accessories/: Create_User_file.py  IV_results_page.py  add_IVLab_user.py  create_system_settings_file.py  read_scrambled_users_file.py  scramble_file_contents.py  scrambled_users.json  unscramble_file_contents.py  unscramble_file_name_and_contents.py  users.json
_old/igor/: igor.pxp
app/: build.md
app/.venv-mac_mojave/: pyvenv.cfg
components/: setup.py
components/iv_lab_components/: __init__.py
components/iv_lab_components/computer_parameters/: mock_computer_parameters.py
components/iv_lab_components/iv_system_parameters/: mock_iv_system_parameters.py
components/iv_lab_components/lamps/: __init__.py  __main__.py  keithley_filter_wheel.py  mock_lamp.py  oriel_lss_7120.py  trinamic_tmcm_3110.py
components/iv_lab_components/smus/: keithley_2400.py  keithley_2602.py  mock_smu.py
components/iv_lab_components/system_parameters/: mock_system_parameters.py
components/src/: arduino.py
components/src/lamps/: trinamic_base.py  trinamic_tmcm_1260.py  wavelabs_base.py  wavelabs_sinus_70.py
components/systems/: mock_system.py
config/: system_settings_example.json
config/examples/: bcl.toml  bcl_old_iv.toml  dell.toml  fte.toml  gmf.toml  ivlab_indoor.toml  ivlab_wavelabs.toml  old_iv.toml  oriel_iv.toml  sinus70_1.toml  verasol_glovebox.toml
controller/: README.md  setup.py
controller/iv_lab_controller/: Keithley26XX.py  __init__.py  arduino.py  authentication.py  common.py  gui.py  lamp.py  runner.py  smu.py  store.py  system.py  system_parameters.py  types.py  user.py
controller/iv_lab_controller/base_classes/: __init__.py  computer_parameters.py  experiment.py  experiment_parameters.py  experiment_parameters_widget.py  hardware_base.py  iv_system_parameters.py  lamp.py  measurement_parameters.py  parameters_dictionary.py  parameters_widget.py  procedure.py  result.py  results.py  smu.py  system.py  system_parameters.py  value_widget.py
controller/iv_lab_controller/components/: Keithley26XX.py  smu.py
controller/iv_lab_controller/measurements/: cell_parameters.py  chronopotentiometry_result.py  mpp_result.py  (+5 more)
docs/: ARCHITECTURE.md  HARDWARE.md  MIGRATION.md  REAL_HARDWARE_VALIDATION.md  TESTING.md  VALIDATION.md  information_for_felix.txt
docs/verasol/: CLAUDE.md  README.md  test_connection.py  verasol.py  verasol_gui.py
experiments/: README.md  setup.py
experiments/systems/: mock_system.py  oriel_iv.py
igor/: igor.pxp
instruments/: README.md  setup.py
interface/: README.md  setup.py
interface/iv_lab_interface/: __init__.py  common.py  experiment.py  interface.py  login.py  measurement.py  plot.py  types.py
src/iv_lab/: main.py  scaffold.py
systems/: mock_system.py  oriel_iv.py
systems/iv_lab_systems/: mock_system.py  oriel_iv.py
tests/: conftest.py  test_arduino_emulation.py  test_arduino_real_driver.py  test_auth_legacy_behavior.py  test_calibration_emulated.py  test_config_discovery.py  test_core_system.py  test_end_to_end_emulation.py  test_file_writer_legacy_format.py  test_gui_components.py  test_gui_main_window.py  test_gui_measurement_panel.py  test_hardware_base.py  test_import_package.py  test_import_without_hardware_drivers.py  test_iv_curve_emulated.py  test_jv_metrics.py  test_lamp_emulation.py  test_lamp_real_drivers.py  test_logbook.py  test_main_entry.py  test_measurement_workers.py  test_mpp_emulated.py  test_pdf_report.py  test_results.py  test_scaffold.py  test_settings.py  test_smu_base.py  test_smu_emulation.py  test_smu_keithley_2400.py  test_smu_keithley_26xx.py  test_time_dependent_protocols.py
(+163 files in other folders)
